<resources>
    <string name="app_name">移动医疗HD</string>
    <string name="main_name">基本公共卫生移动移访平台</string>
    <string name="gender_prompt">选择性别</string>
    <string name="yhzgx_prompt">选择与户主关系</string>
    <string name="mz_prompt">选择民族</string>
    <string name="whcd_prompt">选择文化程度</string>
    <string name="xx_prompt">选择血型</string>
    <string name="hkxz_prompt">选择户口性质</string>
    <string name="hyzk_prompt">选择婚姻状况</string>
    <string name="jtgz_prompt">选择具体工种</string>
    <string name="RH_prompt">选择RH阴性</string>
    <string name="zy_prompt">选择职业</string>
    <string name="gj_prompt">选择国籍</string>
    <string name="yzlx_prompt">选择援助类型</string>
    <string name="czlx_prompt">选择常住类型</string>
    <string name="zj_prompt">选择证件类型</string>
    <string name="ywlx_prompt">选择药物类型</string>
    <string name="smqk_prompt">选择睡眠情况</string>
    <string name="ysqk_prompt">选择饮食情况</string>
    <string name="grshll_prompt">选择个人生活料理</string>
    <string name="jwhd_prompt">选择家务活动</string>
    <string name="xxnl_prompt">选择学习能力</string>
    <string name="scldjgz_prompt">选择生产劳动及工作</string>
    <string name="shrjjw_prompt">选择社会人际交往</string>
    <string name="gsqk_prompt">选择关锁情况</string>
    <string name="zyqk_prompt">选择住院情况</string>
    <string name="zlxg_prompt">选择治疗效果</string>
    <string name="bcsffl_prompt">选择本次随访分类</string>
    <string name="sfzqjy_prompt">选择随访周期建议</string>
    <string name="sfxz_prompt">选择随访性质</string>
    <string name="xlzt_prompt">选择心理状态</string>
    <string name="qylx_prompt">选择签约类型</string>
    <string name="xmlb_prompt">请选择一级项目</string>
    <string name="xmmc_prompt">请选择二级项目</string>
    <string-array name="gender_conditions">
        <item>未知</item>
        <item>男</item>
        <item>女</item>
        <item>未说明性别</item>
    </string-array>
    <string-array name="gender_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>9</item>
    </string-array>
    <string name="relation_prompt">请选择与户主关系</string>
    <string-array name="relation_conditions">
        <item>户主</item>
        <item>配偶</item>
        <item>子</item>
        <item>女</item>
        <item>孙子，孙女，或外孙子，外孙女</item>
        <item>父母</item>
        <item>主父母或外主父母</item>
        <item>兄、弟、姐、妹</item>
        <item>其他</item>
        <item>其他情况配偶</item>
        <item>夫</item>
        <item>妻</item>
        <item>儿子</item>
        <item>养子</item>
        <item>女婿</item>
        <item>其他儿子</item>
        <item>女儿</item>
        <item>养女</item>
        <item>儿媳</item>
        <item>其他女儿</item>
        <item>堂姊妹</item>
        <item>表姊妹</item>
        <item>孙子</item>
        <item>孙女</item>
        <item>外孙子</item>
        <item>外孙女</item>
        <item>孙媳妇</item>
        <item>孙女婿</item>
        <item>曾孙子</item>
        <item>曾孙女</item>
        <item>其他孙子</item>
        <item>父亲</item>
        <item>母亲</item>
        <item>公公</item>
        <item>婆婆</item>
        <item>岳父</item>
        <item>岳母</item>
        <item>继父</item>
        <item>继母</item>
        <item>其他父母关系</item>
        <item>祖父母</item>
        <item>祖父</item>
        <item>祖母</item>
        <item>外祖父</item>
        <item>外祖母</item>
        <item>配偶的祖父母</item>
        <item>曾祖父</item>
        <item>曾祖母</item>
        <item>配偶的曾祖父母</item>
        <item>其他祖父母</item>
        <item>兄弟姐妹</item>
        <item>兄</item>
        <item>嫂</item>
        <item>弟</item>
        <item>弟媳</item>
        <item>姐姐</item>
        <item>姐夫</item>
        <item>妹妹</item>
        <item>妹夫</item>
        <item>其他兄弟姐妹</item>
        <item>伯父</item>
        <item>伯母</item>
        <item>叔父</item>
        <item>婶母</item>
        <item>舅父</item>
        <item>舅母</item>
        <item>姨父</item>
        <item>姨母</item>
        <item>姑父</item>
        <item>姑母</item>
        <item>堂兄弟</item>
        <item>表兄弟</item>
        <item>侄子</item>
        <item>侄女</item>
        <item>外甥</item>
        <item>外甥女</item>
        <item>其他亲属</item>
        <item>保姆</item>
        <item>非亲属</item>
    </string-array>
    <string-array name="relation_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>
    <string name="folk_prompt">选择民族</string>
    <string-array name="folk_conditions">
        <item>汉族</item>
        <item>蒙古族</item>
        <item>回族</item>
        <item>藏族</item>
        <item>维吾尔族</item>
        <item>苗族</item>
        <item>彝族</item>
        <item>壮族</item>
        <item>布依族</item>
        <item>朝鲜族</item>
        <item>满族</item>
        <item>侗族</item>
        <item>瑶族</item>
        <item>白族</item>
        <item>土家族</item>
        <item>哈尼族</item>
        <item>哈萨克族</item>
        <item>傣族</item>
        <item>黎族</item>
        <item>傈僳族</item>
        <item>佤族</item>
        <item>畲族</item>
        <item>高山族</item>
        <item>拉祜族</item>
        <item>水族</item>
        <item>东乡族</item>
        <item>纳西族</item>
        <item>景颇族</item>
        <item>柯尔克孜族</item>
        <item>土族</item>
        <item>达斡尔族</item>
        <item>仫佬族</item>
        <item>羌族</item>
        <item>布朗族</item>
        <item>撒拉族</item>
        <item>毛南族</item>
        <item>仡佬族</item>
        <item>锡伯族</item>
        <item>阿昌族</item>
        <item>普米族</item>
        <item>塔吉克族</item>
        <item>怒族</item>
        <item>乌孜别克族</item>
        <item>俄罗斯族</item>
        <item>鄂温克族</item>
        <item>德昂族</item>
        <item>保安族</item>
        <item>裕固族</item>
        <item>京族</item>
        <item>塔塔尔族</item>
        <item>独龙族</item>
        <item>鄂伦春族</item>
        <item>赫哲族</item>
        <item>门巴族</item>
        <item>珞巴族</item>
        <item>基诺族</item>
    </string-array>
    <string-array name="folk_values">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
    </string-array>
    <string name="educbg_prompt">选择文化程度</string>
    <string-array name="educbg_conditions">
        <item>研究生</item>
        <item>大学本科</item>
        <item>大学专科和专科学校</item>
        <item>中专</item>
        <item>技工学校</item>
        <item>高中</item>
        <item>初中</item>
        <item>小学</item>
        <item>文盲或半文盲</item>
        <item>其他</item>
    </string-array>
    <string-array name="educbg_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>97</item>
    </string-array>
    <string name="live_prompt">选择常住类型</string>
    <string-array name="live_conditions">
        <item>户籍</item>
        <item>非户籍</item>
    </string-array>
    <string name="regtype_prompt">选择户口性质</string>
    <string-array name="regtype_conditions">
        <item>农业户口</item>
        <item>非农业户口</item>
        <item>农转非</item>
    </string-array>
    <string name="personal_qt_text">其他</string>
    <string name="bl_hxp_text">化学品</string>
    <string name="bl_dw_text">毒物</string>
    <string name="bl_sx_text">射线</string>
    <string name="jz_father_text">父亲</string>
    <string name="jz_gxy_text">高血压</string>
    <string name="jz_tnb_text">糖尿病</string>
    <string name="jz_gxb_text">冠心病</string>
    <string name="jz_exzl_text">恶性肿瘤</string>
    <string name="jz_zsxjb_text">慢性阻塞性疾病</string>
    <string name="jz_nzz_text">脑卒中</string>
    <string name="jz_zxjsb_text">重性精神疾病</string>
    <string name="jz_jhb_text">结核病</string>
    <string name="jz_gy_text">肝脏疾病</string>
    <string name="jz_xtjx_text">先天畸形</string>
    <string name="pttj_jktjb_text">健康体检表</string>
    <string name="pttj_zrys_text">责任医师:   </string>
    <string name="pttj_tjsj_text">体检时间:   </string>
    <string name="pttj_zz_text">症状</string>
    <string name="pttj_wzz_text">无症状</string>
    <string name="pttj_tt_text">头痛</string>
    <string name="pttj_ty_text">头晕</string>
    <string name="pttj_xj_text">心悸</string>
    <string name="pttj_xm_text">胸闷</string>
    <string name="pttj_xt_text">胸痛</string>
    <string name="pttj_mxks_text">慢性咳嗽</string>
    <string name="pttj_kt_text">咳痰</string>
    <string name="pttj_hxkn_text">呼吸困难</string>
    <string name="pttj_dy_text">多饮</string>
    <string name="pttj_dn_text">多尿</string>
    <string name="pttj_tzxj_text">体重下降</string>
    <string name="pttj_fl_text">乏力</string>
    <string name="pttj_gjzt_text">关节肿痛</string>
    <string name="pttj_slmh_text">视力模糊</string>
    <string name="pttj_sjmm_text">手脚麻木</string>
    <string name="pttj_nj_text">尿急</string>
    <string name="pttj_ntong_text">尿痛</string>
    <string name="pttj_bm_text">便秘</string>
    <string name="pttj_fx_text">腹泻</string>
    <string name="pttj_exot_text">恶心呕吐</string>
    <string name="pttj_yh_text">眼花</string>
    <string name="pttj_em_text">耳鸣</string>
    <string name="pttj_rfzt_text">乳房胀痛</string>
    <string name="cm_qt_text">其他</string>
    <string name="cm_wu_text">无</string>
    <string name="cm_have_text">有</string>
</resources>