<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp20" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/jktj_title"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="30.0dip"
                    android:text="@string/pttj_jktjb_text"
                    android:textColor="@color/jz_text_color"
                    android:textSize="@dimen/dp20" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@drawable/jktj_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pttj_zrys_text"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/dp20" />

                <EditText
                    android:id="@+id/zrysEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300.0dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pttj_tjsj_text"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/dp20" />

                <com.cking.phss.widget.CalendarText
                    android:id="@+id/tjsjCalendarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_date_bg"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/dp20" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="140.0dip"
                android:layout_height="wrap_content"
                android:background="@drawable/jktj_title"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10.0dip"
                    android:text="@string/pttj_zz_text"
                    android:textColor="@color/jz_text_color"
                    android:textSize="@dimen/dp20" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@drawable/jktj_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.adinnet.xd.medical.widget.RelativeGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="20dip" >

                <CheckBox
                    android:id="@+id/zz01CheckBox"
                    style="@style/compound_button_style"
                    android:text="@string/pttj_wzz_text" />

                <CheckBox
                    android:id="@+id/zz02CheckBox"
                    style="@style/compound_button_style"
                    android:layout_marginLeft="80dip"
                    android:layout_toRightOf="@+id/zz01CheckBox"
                    android:text="@string/pttj_tt_text" />

                <CheckBox
                    android:id="@+id/zz03CheckBox"
                    style="@style/compound_button_style"
                    android:layout_marginLeft="80dip"
                    android:layout_toRightOf="@+id/zz02CheckBox"
                    android:text="@string/pttj_ty_text" />

                <CheckBox
                    android:id="@+id/zz04CheckBox"
                    style="@style/compound_button_style"
                    android:layout_marginLeft="80dip"
                    android:layout_toRightOf="@+id/zz03CheckBox"
                    android:text="@string/pttj_xj_text" />

                <CheckBox
                    android:id="@+id/zz05CheckBox"
                    style="@style/compound_button_style"
                    android:layout_marginLeft="80dip"
                    android:layout_toRightOf="@+id/zz04CheckBox"
                    android:text="@string/pttj_xm_text" />

                <CheckBox
                    android:id="@+id/zz06CheckBox"
                    style="@style/compound_button_style"
                    android:layout_marginLeft="80dip"
                    android:layout_toRightOf="@+id/zz05CheckBox"
                    android:text="@string/pttj_xt_text" />

                <CheckBox
                    android:id="@+id/zz07CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz01CheckBox"
                    android:layout_below="@+id/zz01CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_mxks_text" />

                <CheckBox
                    android:id="@+id/zz08CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz02CheckBox"
                    android:layout_below="@+id/zz02CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_kt_text" />

                <CheckBox
                    android:id="@+id/zz09CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz03CheckBox"
                    android:layout_below="@+id/zz03CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_hxkn_text" />

                <CheckBox
                    android:id="@+id/zz10CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz04CheckBox"
                    android:layout_below="@+id/zz04CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_dy_text" />

                <CheckBox
                    android:id="@+id/zz11CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz05CheckBox"
                    android:layout_below="@+id/zz05CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_dn_text" />

                <CheckBox
                    android:id="@+id/zz12CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz06CheckBox"
                    android:layout_below="@+id/zz06CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_tzxj_text" />

                <CheckBox
                    android:id="@+id/zz13CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz07CheckBox"
                    android:layout_below="@+id/zz07CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_fl_text" />

                <CheckBox
                    android:id="@+id/zz14CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz08CheckBox"
                    android:layout_below="@+id/zz08CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_gjzt_text" />

                <CheckBox
                    android:id="@+id/zz15CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz09CheckBox"
                    android:layout_below="@+id/zz09CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_slmh_text" />

                <CheckBox
                    android:id="@+id/zz16CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz10CheckBox"
                    android:layout_below="@+id/zz10CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_sjmm_text" />

                <CheckBox
                    android:id="@+id/zz17CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz11CheckBox"
                    android:layout_below="@+id/zz11CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_nj_text" />

                <CheckBox
                    android:id="@+id/zz18CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz12CheckBox"
                    android:layout_below="@+id/zz12CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_ntong_text" />

                <CheckBox
                    android:id="@+id/zz19CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz13CheckBox"
                    android:layout_below="@+id/zz13CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_bm_text" />

                <CheckBox
                    android:id="@+id/zz20CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz14CheckBox"
                    android:layout_below="@+id/zz14CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_fx_text" />

                <CheckBox
                    android:id="@+id/zz21CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz15CheckBox"
                    android:layout_below="@+id/zz15CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_exot_text" />

                <CheckBox
                    android:id="@+id/zz22CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz16CheckBox"
                    android:layout_below="@+id/zz16CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_yh_text" />

                <CheckBox
                    android:id="@+id/zz23CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz17CheckBox"
                    android:layout_below="@+id/zz17CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_em_text" />

                <CheckBox
                    android:id="@+id/zz24CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz18CheckBox"
                    android:layout_below="@+id/zz18CheckBox"
                    android:layout_marginTop="20dip"
                    android:text="@string/pttj_rfzt_text" />

                <CheckBox
                    android:id="@+id/zz25CheckBox"
                    style="@style/compound_button_style"
                    android:layout_alignLeft="@+id/zz19CheckBox"
                    android:layout_below="@+id/zz19CheckBox"
                    android:layout_marginBottom="8dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/cm_qt_text"
                    android:textSize="@dimen/dp20" />

                <EditText
                    android:id="@+id/qtEditText"
                    android:layout_width="170.0dip"
                    android:layout_height="40.0dip"
                    android:layout_alignBaseline="@+id/zz25CheckBox"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_toRightOf="@+id/zz25CheckBox"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/personal_qt_text"
                    android:textSize="@dimen/dp20" />
            </com.adinnet.xd.medical.widget.RelativeGroup>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>